--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=sveps-core-notification
+server.port=9989
+
+spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.username=nagasaideep.puppala@sveps.co.in
+spring.mail.password=Yuvasri@9797
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
