--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+
+spring.data.mongodb.uri=mongodb+srv://nagasaideeppuppala:Z8vvKF6JEjbyyKLo@cluster0.knnpj.mongodb.net/SVEPS_DEV1?retryWrites=true&w=majority&ssl=true&appName=Cluster0
+
