--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
 			<artifactId>uuid-creator</artifactId>
 			<version>4.6.0</version> <!-- Check for latest version -->
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.7.0</version> <!-- Check for the latest version -->
+		</dependency>
 
 
 	</dependencies>
