--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
+springdoc.api-docs.path=/v1/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
 spring.data.mongodb.uri=mongodb+srv://nagasaideeppuppala:Z8vvKF6JEjbyyKLo@cluster0.knnpj.mongodb.net/SVEPS_DEV1?retryWrites=true&w=majority&ssl=true&appName=Cluster0
 
